<?xml version="1.0" encoding="utf-8"?>
 <!--
  This file is part of Wake Me At. Wake Me At is the legal property of
  its developer, Henry Bush (spookypeanut). Wake Me At is free software:
  you can redistribute it and/or modify it under the terms of the GNU
  General Public License as published by the Free Software Foundation,
  either version 3 of the License, or (at your option) any later
  version. Wake Me At is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  General Public License for more details. You should have received a
  copy of the GNU General Public License along with Wake Me At, in the
  file "COPYING". If not, see <http://www.gnu.org/licenses/>.
 -->
<resources>
 
 <!-- GLOBAL -->
 <string name="app_name">WakeMe@</string>
 <string name="package_name">uk.co.spookypeanut.wake_me_at</string>
 <string name="app_name_nospaces">WakeMe@</string>
<string name="alert_dialog_cancel">Cancel</string>
<string name="alert_dialog_ok">OK</string>
<string name="alert_dialog_retry">Retry</string>
 
 <!-- WAKEME@ MAIN -->
 <string name="mainTitle">Location List</string>
 <string name="new_location_item">[Tap here to add a new location]</string>

<string name="mn_new_loc">New location</string>
<string name="mn_quit">Quit</string>
<string name="mn_stop_all">Cancel alarm</string>
<string name="mn_export_sd">Backup to SD card</string>
<string name="mn_import_sd">Import from backup</string>

<string name="export_db_success">Database backed up to %1$s</string>
<string name="export_db_failure">Failed to backup database: %1$s</string>
<string name="import_db_dialog_title">Import DB?</string>
<string name="import_db_dialog_message">This will erase all current locations</string>  

<string name="mn_context_start">Wake here</string>
<string name="mn_context_stop">Cancel alarm</string>
<string name="mn_context_edit">Edit location</string>
<string name="mn_context_delete">Delete location</string>

<string name="mn_unnamed">&lt;unnamed&gt;</string>
 
<!-- EDIT LOCATION -->
 <string name="get_loc_button_name">Get location…</string>
 <string name="get_loc_map_button_name">Find location…</string>

<string name="preset_label">Mode of transport</string>
<string name="start_button_name">Activate alarm</string>
<string name="stop_button_name">Cancel alarm</string>
<string name="loc_prov_spinner_label">Location Provider</string>
<string name="unitListPrompt">Unit</string>

<!-- WAKEME@ SERVICE -->
<string name="foreground_service_started">WakeMe@ alarm activated</string>
<string name="foreground_service_stopped">WakeMe@ alarm cancelled</string>
<string name="serviceBroadcastName">uk.co.spookypeanut.wake_me_at.alarmupdate</string>

<string name="providerDisabledMessage">The \"%1$s\" location provider is disabled in your phone settings. Please enable it and try again.</string>
<string name="notif_full">You are %1$s away from %2$s</string>
<string name="oldLocationWarning">Warning: the current location is %1$ss old</string>

<!-- GET LOCATION MAP -->
 <string name="how_to_select_location">Long press on the map to select a location</string>
 <string name="map_name">Select location</string>
 <string name="get_loc_layout_name">Select location</string>
 <string name="uselocationbutton">Use this</string>
 <string name="dontuselocationbutton">Try again</string>
 <string name="geocoder_progress">Address lookup</string>
 <string name="geocoder_progress_msg">Please wait while the address is being retrieved</string>
 <string name="search_progress">Searching</string>
 <string name="search_progress_msg">Searching the map for \"%1$s\"</string>
 <string name="select_location_dialog_title">Location name</string>
 <string name="cant_get_location_msg">Couldn\'t get your location: defaulting to the centre of the earth</string>

<string name="mn_map">Map Mode</string>
<string name="mn_satellite">Satellite Mode</string>
<string name="mn_orig_loc">Original Location</string>
<string name="mn_curr_loc">My Location</string>
<string name="mn_search">Search</string>

<string name="search_label">WakeMe@ Search</string>
<string name="search_hint">Search map</string>
<string name="search_prompt">Say a location name</string>

<string name="search_nodata_title">No data connection</string>
<string name="search_nodata_message">Can\'t get search results, as there is no data connection</string>

<string name="search_noresults_title">No results</string>
<string name="search_noresults_message">The search did not generate any results: check your spelling, and try being more specific (e.g. \"Manchester Piccadilly\" instead of \"Piccadilly\")</string>

<string name="searchresults_title">Search results</string>

<string name="uselocation_title">Selected location</string>
<string name="uselocation_nodata">(Address retrieval failed: no data connection?)</string>

<string name="long_press_toast">Loading location information…</string>

<!-- ALARM -->
<string name="alarmTitle">Approaching destination</string>
<string name="alarmButtonStop">Cancel Alarm</string>
<string name="alarmButtonMain">Location List</string>
<string name="alarmButtonSnooze">Snooze (30s)</string>
<string name="alarmButtonEdit">Edit Location</string>
<string name="alarmSpeech">You are %1$s from %2$s</string>
<string name="alarmMessage">You are %1$s from %2$s</string>
<string name="locAgeMessage">Location data is %1$ss old</string>
<string name="alarmAwaitingFix">Awaiting first location fix…</string>
<string name="noTtsError">Your device does not have Text-To-Speech capability</string>


<!-- SHORTCUTS -->
<!-- I thought this would never get used, but I think it shows in the
  multi-tasking thing (long-pressing Home) when the task is launched
  from a shortcut -->
<string name="shortcuts">WakeMe@</string>
<string name="sample_shortcuts">WakeMe@ location</string>
<string name="shortcut_name">WakeMe@ %1$s</string>

<string-array name="locProvAndroid">
<item>gps</item>
<item>network</item>
<item>passive</item>
<item>mock</item>
</string-array>

<string-array name="locProvHuman">
<item>GPS</item>
<item>Phone network</item>
<item>Passive</item>
<item>Mock GPS</item>
</string-array>


<string-array name="editLocationHeadingList">
<item>Basic</item>
<item>Advanced</item>
<item>Alarm</item>
<item>Out-of-date location warning</item>
</string-array>
<string name="mock_locations_allowed">The system is configured to accept mock locations</string>
<string name="mock_locations_not_allowed">The system is configured to forbid mock locations</string>

</resources>
