<?xml version="1.0" encoding="utf-8"?>
<!--
    This file is part of Wake Me At. Wake Me At is the legal property
    of its developer, Henry Bush (spookypeanut).

    Wake Me At is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Wake Me At is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Wake Me At, in the file "COPYING".  If not, see 
    <http://www.gnu.org/licenses/>.
-->
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/mn_orig_loc"
          android:icon="@android:drawable/ic_menu_revert"
          android:title="@string/mn_orig_loc" />
    <item android:id="@+id/mn_satellite"
          android:icon="@android:drawable/ic_menu_mapmode"
          android:title="@string/mn_satellite" />
    <item android:id="@+id/mn_curr_loc"
          android:icon="@android:drawable/ic_menu_mylocation"
          android:title="@string/mn_curr_loc" />
    <item android:id="@+id/mn_search"
          android:icon="@android:drawable/ic_menu_search"
          android:title="@string/mn_search" />
</menu>
